<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/add_edit_recipe">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ui.fragments.AddEditRecipeFragment"
        android:padding="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:hintEnabled="false"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="wrap_content"
                android:minWidth="100dp"
                android:maxWidth="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:padding="10dp"
                android:textSize="20sp"
                android:inputType="text"
                android:background="@color/default_background"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_ingredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/ingredients"
            android:textSize="25sp"
            android:layout_gravity="center"/>

        <include android:id="@+id/cl_people_counter"
            layout="@layout/people_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/description"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/checkbox_veggie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vegetarian"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/checkbox_vegan"
                app:layout_constraintTop_toBottomOf="@+id/tv_description" />

            <CheckBox
                android:id="@+id/checkbox_vegan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vegan"
                app:layout_constraintLeft_toRightOf="@+id/checkbox_veggie"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_description" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_tags_separate_by_comma"
                app:layout_constraintLeft_toLeftOf="@id/cl_description"
                app:layout_constraintRight_toRightOf="@id/cl_description"
                app:layout_constraintTop_toBottomOf="@id/checkbox_veggie" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group_tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                app:chipSpacing="0.7dp"
                app:layout_constraintLeft_toLeftOf="@id/cl_description"
                app:layout_constraintTop_toBottomOf="@id/input_tags" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_recipe_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:inputType="textImeMultiLine"
                android:minHeight="100dp"
                app:layout_constraintLeft_toLeftOf="@id/cl_description"
                app:layout_constraintTop_toBottomOf="@id/chip_group_tags" />

            <TextView
                android:id="@+id/tv_instructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:text="@string/instructions"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="@id/cl_description"
                app:layout_constraintRight_toRightOf="@id/cl_description"
                app:layout_constraintTop_toBottomOf="@id/et_recipe_description" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_instructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="@id/cl_description"
                app:layout_constraintRight_toRightOf="@id/cl_description"
                app:layout_constraintTop_toBottomOf="@id/tv_instructions" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/bt_delete_recipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/delete_recipe"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textColor="#DD0000"
            android:backgroundTint="#EEEEEE"
            android:visibility="gone"/>

    </LinearLayout>
</ScrollView>