<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.ShoppingListFragment"
    android:fillViewport="true"
    android:nestedScrollingEnabled="false"
    android:id="@+id/scrollview">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/title_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_list"
            android:padding="10dp"
            android:textSize="30sp"
            app:layout_constraintTop_toTopOf="@id/container"
            app:layout_constraintRight_toRightOf="@id/container"
            app:layout_constraintLeft_toLeftOf="@id/container"/>

        <TextView
            android:id="@+id/title_recipes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipes"
            android:padding="10dp"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/title_list"
            app:layout_constraintRight_toRightOf="@id/container"
            app:layout_constraintLeft_toLeftOf="@id/container"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_shoppingList_recipes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/title_recipes"
            app:layout_constraintRight_toRightOf="@id/container"
            app:layout_constraintLeft_toLeftOf="@id/container"/>

        <Button
            android:id="@+id/button_add_recipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_recipe"
            app:layout_constraintTop_toBottomOf="@id/rv_shoppingList_recipes"
            app:layout_constraintRight_toRightOf="@id/container"
            app:layout_constraintLeft_toLeftOf="@id/container"/>

        <TextView
            android:id="@+id/title_ingredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingredients"
            android:padding="10dp"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/button_add_recipe"
            app:layout_constraintRight_toRightOf="@id/container"
            app:layout_constraintLeft_toLeftOf="@id/container"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_shoppingList_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/title_ingredients"
            app:layout_constraintRight_toRightOf="@id/container"
            app:layout_constraintLeft_toLeftOf="@id/container"/>

        <Button
            android:id="@+id/button_add_ingredient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_ingredient"
            app:layout_constraintTop_toBottomOf="@id/rv_shoppingList_ingredients"
            app:layout_constraintRight_toRightOf="@id/container"
            app:layout_constraintLeft_toLeftOf="@id/container"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>